--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ html {
   border-right: 1px solid white;
 }
 body {
-  background-image: url("../../img/orange2.jpg");
+  background-color: grey;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -78,14 +78,17 @@ body {
   height: 10%;
   width: 60%;
   margin: auto;
-  background-color: white;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
 }
 .intro .title {
   height: 50%;
   width: 100%;
-  color: #ff7c31;
+  color: #ffffff;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -98,13 +101,19 @@ body {
 }
 .slide1 {
   background-image: url("../../img/food1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .slide2 {
   background-image: url("../../img/food2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
 }
 .slide3 {
   background-image: url("../../img/food3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .btn1 {
   color: white;
@@ -112,8 +121,10 @@ body {
 .btn2 {
   color: white;
 }
-.midSection {
+.Panel {
   margin: auto;
+  margin-top: 3rem;
+  padding: 1rem;
   width: 60%;
   height: 50%;
   background-color: white;
@@ -123,21 +134,23 @@ body {
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
-.midSection .midInfo {
-  width: 90%;
-  height: 25%;
+.Panel .Info {
+  width: 50%;
+  height: 90%;
   margin-top: 0.5rem;
   padding: 0.25rem;
 }
-.midSection .midInfo p {
+.Panel .Info p {
   color: black;
   font-size: 1.5rem;
 }
 .midInfoImg {
-  width: 90%;
-  height: 40%;
+  width: 50%;
+  height: 90%;
   padding: 1rem;
+  background-image: url("../../img/mobile.png");
   background-size: cover;
+  border-radius: 1rem;
 }
 .midInfoImg p {
   color: black;
