--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,5 @@
 body{
-   // background-image: url("../../img/mountain.jpg") ;
-   background-color: grey;
+   background-image: url("../../img/Market2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
