--- a/css/index.css
+++ b/css/index.css
@@ -39,8 +39,9 @@ html {
 }
 h5 {
   font-size: 1.5rem;
-  border: 1px solid black;
+  background-color: #292929;
   border-radius: 1rem;
+  color: blanchedalmond;
   padding: 0.5rem;
 }
 .navWrapper {
@@ -163,7 +164,8 @@ body {
 }
 .titleAbout {
   width: 40%;
-  background-color: #505050;
+  background-color: black;
+  opacity: 0.8;
   border-radius: 1rem;
   margin: auto;
   display: flex;
@@ -189,7 +191,7 @@ body {
   width: 30%;
   height: 30%;
   border-radius: 1rem;
-  background-color: #8a2d2d;
+  background-color: #362f2c;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -198,57 +200,62 @@ body {
   margin: 0.5rem;
 }
 .teamWrapper .teamMemberWrapper .teamMember {
-  width: 90%;
+  width: 70%;
   height: 60%;
   background-color: black;
   border-radius: 1rem;
 }
+@media (max-width: 1000px) {
+  .teamWrapper .teamMemberWrapper .teamMember {
+    width: 90%;
+  }
+}
 .git {
   font-size: 2rem;
   color: #000000;
-  border: 1px solid black;
+  border: 1px solid #000000;
   width: 50%;
   display: flex;
   justify-content: center;
   margin: 0.3rem;
   border-radius: 1rem;
+  border-bottom: 4px solid black;
 }
 .git:hover {
   background-color: #ffffff;
   transition: background-color 1s;
 }
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
 .Me {
-  background-image: url("../../img/Me.jpg");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
 }
 .Kirk {
-  background-image: url("../../img/Kirk.jpg");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
 }
 .Ahmad {
-  background-image: url("../../img/Ahmad.jpg");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
 }
 .Leon {
-  background-image: url("../../img/Leon.jpg");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
 }
 .Reg {
-  background-image: url("../../img/Reg.png");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
 }
 .Aaron {
-  background-image: url("../../img/Aaron.jpg");
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
