--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,7 @@
 h5{
     font-size: 1.5rem;
-    border: 1px solid black;
+    background-color: rgb(41, 41, 41);
     border-radius: 1rem;
+    color: blanchedalmond;
     padding: .5rem;
 }
