Lots of content. completely responsive at all screens

--- a/less/global.less
+++ b/less/global.less
@@ -5,3 +5,17 @@ h5{
     color: blanchedalmond;
     padding: .5rem;
 }
+h2{
+    font-family: 'Prata', serif;
+    color:white;
+    font-size: 1.8rem;
+}
+p{
+    font-family: 'Lato', sans-serif;
+    color: grey;
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+a{
+    text-decoration: none;
+}
