--- a/css/index.css
+++ b/css/index.css
@@ -44,83 +44,128 @@ h5 {
   color: blanchedalmond;
   padding: 0.5rem;
 }
+h2 {
+  font-family: 'Prata', serif;
+  color: white;
+  font-size: 1.8rem;
+}
+p {
+  font-family: 'Lato', sans-serif;
+  color: grey;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
+}
 .navWrapper {
   margin: auto;
-  width: 60%;
-  background-color: black;
-  opacity: 0.8;
+  width: 100%;
+  background-color: #c99a1b;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .navWrapper {
+    display: none;
+  }
+}
 .navWrapper nav {
-  width: 100%;
+  width: 50rem;
+  height: 2rem;
+  margin-left: 5%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-evenly;
 }
 .navWrapper nav a {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  height: 2rem;
+  align-items: center;
+  align-content: center;
   width: 100%;
   display: flex;
   justify-content: center;
   text-decoration: none;
-  color: white;
-  padding-bottom: 1%;
-  font-size: 1.4rem;
+  color: black;
+  font-size: 1rem;
+  font-family: 'Syncopate', sans-serif;
 }
 .navWrapper nav a:hover {
-  background-color: grey;
+  background-color: #f0bf3a;
   transition: background-color 1s;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+}
+.mobileNav {
+  width: 100%;
+  height: 5rem;
+  background-color: #c99a1b;
+  display: flex;
+}
+@media (min-width: 550px) {
+  .mobileNav {
+    display: none;
+  }
+}
+.mobileNav .navReturn {
+  width: 3rem;
+  height: 5rem;
+  margin: 1rem;
+}
+.mobileNav .navReturn .navDash {
+  border: solid 3px #272727;
+  border-radius: 1rem;
+}
+.underNav {
+  height: 8rem;
+  background-color: #1f1f1f;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+footer {
+  width: 100%;
+  height: 10rem;
+  margin-top: 1rem;
+  border: 1px solid #c99a1b;
+  background-color: #1f1f1f;
 }
 body {
-  background-image: url("../../img/Market2.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
   height: 100%;
-}
-.intro {
-  height: 10%;
-  width: 60%;
-  margin: auto;
-  background-color: black;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-}
-.intro .title {
-  height: 50%;
   width: 100%;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  text-align: center;
+  background-color: #303030;
 }
 .swiper-container {
-  width: 60%;
-  height: 40%;
-  margin-top: 1rem;
+  width: 100%;
+  height: 55%;
   margin-bottom: 1rem;
 }
 .slide1 {
-  background-image: url("../../img/food1.jpg");
+  background-image: url("../../img/africa.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 }
 .slide2 {
-  background-image: url("../../img/food2.jpg");
+  background-image: url("../../img/africa2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 .slide3 {
-  background-image: url("../../img/food3.jpg");
+  background-image: url("../../img/africa3.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+}
+.slideInfo {
+  background-color: black;
+  opacity: 0.8;
+  border-bottom: 1px solid #c99a1b;
+  display: flex;
+  justify-content: center;
 }
 .btn1 {
   color: white;
@@ -131,102 +176,170 @@ body {
 .Panel {
   margin: auto;
   margin-top: 3rem;
-  padding: 1rem;
-  width: 60%;
-  height: 50%;
-  background-color: white;
+  width: 80rem;
+  height: 30rem;
+  background-color: #1f1f1f;
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
+  align-content: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  border-top: 3px solid #fde7ac;
+  border: 2px solid #c99a1b;
+  border-bottom: 15px solid #5e480c;
+}
+@media (max-width: 1300px) {
+  .Panel {
+    flex-direction: column;
+    width: 40rem;
+    height: 65rem;
+    align-items: center;
+  }
+}
+@media (max-width: 667px) {
+  .Panel {
+    width: 80%;
+  }
 }
 .Panel .Info {
-  width: 50%;
-  height: 90%;
-  margin-top: 0.5rem;
-  padding: 0.25rem;
+  width: 40rem;
+  height: 25rem;
 }
-.Panel .Info p {
-  color: black;
-  font-size: 1.5rem;
+@media (max-width: 1300px) {
+  .Panel .Info {
+    width: 38rem;
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 667px) {
+  .Panel .Info {
+    width: 19rem;
+    margin-top: 0;
+  }
+}
+hr {
+  border: 1px solid grey;
 }
 .midInfoImg {
-  width: 50%;
-  height: 90%;
-  padding: 1rem;
-  background-image: url("../../img/mobile.png");
+  width: 30rem;
+  height: 25rem;
   background-size: cover;
+  background-position: center;
   border-radius: 1rem;
+}
+@media (max-width: 667px) {
+  .midInfoImg {
+    width: 20rem;
+    height: 20rem;
+  }
 }
 .midInfoImg p {
   color: black;
 }
+#midImg1 {
+  background-image: url("../../img/mobile.png");
+}
+#midImg2 {
+  background-image: url("../../img/Stocks.png");
+}
+#midImg3 {
+  background-image: url("../../img/money.png");
+}
 .titleAbout {
-  width: 40%;
-  background-color: black;
+  width: 100%;
+  height: 5rem;
+  background-color: #c99a1b;
   opacity: 0.8;
-  border-radius: 1rem;
   margin: auto;
   display: flex;
-  justify-content: center;
-  margin-top: 5rem;
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
 }
 .titleAbout h1 {
-  color: white;
+  color: black;
+}
+.lambda {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.devImg {
+  width: 7rem;
+  height: 5rem;
+  margin: 1rem;
+}
+@media (max-width: 500px) {
+  .devImg {
+    width: 6rem;
+    height: 5rem;
+  }
 }
 .teamWrapper {
   padding: 1rem;
-  margin: auto;
   margin-top: 2rem;
-  width: 100%;
-  height: 100rem;
+  margin: auto;
+  width: 90%;
+  background-image: url("../../img/code.jpg");
+  background-size: cover;
+  background-attachment: fixed;
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
 }
+@media (max-width: 1050px) {
+  .teamWrapper {
+    width: 100%;
+  }
+}
 .teamWrapper .teamMemberWrapper {
-  width: 30%;
-  height: 30%;
+  width: 30rem;
+  height: 30rem;
+  margin: 1rem;
   border-radius: 1rem;
-  background-color: #362f2c;
-  border: 1px solid black;
+  background-color: #272727;
+  border-top: 3px solid #fde7ac;
+  border: 2px solid #c99a1b;
+  border-bottom: 15px solid #5e480c;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem;
+}
+@media (max-width: 1050px) {
+  .teamWrapper .teamMemberWrapper {
+    width: 40rem;
+    margin-bottom: 5rem;
+  }
+}
+.teamWrapper .teamMemberWrapper a {
+  width: 10rem;
+  text-decoration: none;
 }
 .teamWrapper .teamMemberWrapper .teamMember {
-  width: 70%;
+  width: 25;
   height: 60%;
-  background-color: black;
   border-radius: 1rem;
-}
-@media (max-width: 1000px) {
-  .teamWrapper .teamMemberWrapper .teamMember {
-    width: 90%;
-  }
 }
 .git {
   font-size: 2rem;
   color: #000000;
   border: 1px solid #000000;
-  width: 50%;
   display: flex;
   justify-content: center;
   margin: 0.3rem;
   border-radius: 1rem;
   border-bottom: 4px solid black;
+  background-color: #c99a1b;
 }
 .git:hover {
-  background-color: #ffffff;
+  background-color: #fdd35d;
   transition: background-color 1s;
 }
 img {
-  width: 100%;
+  width: 20rem;
   height: 100%;
   border-radius: 1rem;
 }
@@ -259,4 +372,137 @@ img {
   background-size: cover;
   background-position: center;
   margin: 0.5rem;
+}
+.has-scroll-reveal {
+  opacity: 0;
+  animation-play-state: paused;
+}
+.animated {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-play-state: running;
+}
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 2.5rem, 0);
+    transform: translate3d(0, 2.5rem, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+#navBoxBody {
+  background-color: black;
+}
+.swiper-container2 {
+  height: 90%;
+}
+.mobileHead {
+  background-color: black;
+  border-bottom: 2px solid #c99a1b;
+  height: 2rem;
+  width: 100%;
+}
+@media (min-width: 500px) {
+  .mobileHead {
+    display: none;
+  }
+}
+.mobileIntro {
+  width: 80%;
+  height: 50%;
+  border-radius: 2%;
+  background-color: black;
+  background-size: cover;
+  opacity: 0.9;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  filter: alpha(opacity=50);
+}
+.slide4 {
+  background: url("../../img/africa3.jpg");
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.slide5 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column-reverse;
+  background: url("../../img/Lion.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.slide6 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column-reverse;
+  background: url("../../img/africa.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.slide7 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column-reverse;
+  background: url("../../img/africa2.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.mobileBtn {
+  border: 1px solid #c99a1b;
+  border-left: none;
+  border-right: none;
+  color: #ffffff;
+  background-color: black;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  opacity: 0.9;
+  align-items: center;
+  font-family: 'Prata', serif;
+}
+.mobileBtn:hover {
+  background-color: #ff2600;
+  transition: background-color 1s;
+}
+.mobileBtn:active {
+  background-color: #ff2600;
+}
+h1:active {
+  color: white;
+}
+.mobileIntro {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1rem;
+}
+.socialPanel {
+  width: 25%;
+}
+h2 {
+  font-family: 'Prata', serif;
+  color: white;
+  font-size: 1.8rem;
+}
+.mobileFooter {
+  width: 100%;
+  height: 10%;
+  background-color: black;
+  border-top: 2px solid #c99a1b;
 }
