--- a/less/about-us.less
+++ b/less/about-us.less
@@ -1,51 +1,90 @@
 .titleAbout{
-    width: 40%;
-    background-color: black;
+    width: 100%;
+    height: 5rem;
+    background-color: rgb(201, 154, 27);
     opacity: 0.8;
-    border-radius: 1rem;
     margin: auto;
     display: flex;
-    justify-content: center;
-    margin-top: 5rem;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+
 
     h1{
-       color: white;
+       color:black;
     }
+}
+
+.lambda{
+   height:1.5rem;
+   width: 1.5rem;
+
+}
+
+.devImg{
+   width: 7rem;
+   height: 5rem;
+   margin: 1rem;
+
+   @media(max-width: 500px){
+   width: 6rem;
+   height: 5rem;
+   }
+
 }
 
 .teamWrapper{
     padding: 1rem;
-    margin: auto;
     margin-top: 2rem;
-    width: 100%;
-    height: 100rem;
-   // background-color: rgb(80, 80, 80);
+    margin: auto;
+    width: 90%;
+    background-image: url("../../img/code.jpg");
+    background-size: cover;
+    background-attachment: fixed;
     border-radius: 1rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 
+    @media(max-width:1050px){
+       width: 100%;
+      
+    }
+
        .teamMemberWrapper{
-           width: 30%;
-           height: 30%;  
+           width: 30rem;
+           height: 30rem;  
+           margin: 1rem;
            border-radius: 1rem;
-           background-color: rgb(54, 47, 44);
-           border: 1px solid black;
+           background-color: rgb(39, 39, 39);
+           border-top: 3px solid rgb(253, 231, 172);
+           border: 2px solid rgb(201, 154, 27);
+           border-bottom: 15px solid rgb(94, 72, 12);
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
-           margin: .5rem;
+
+           @media(max-width:1050px){
+              width: 40rem;
+              margin-bottom: 5rem;
+           }
+
+
+         
+           a{
+              width: 10rem;
+              text-decoration: none;
+           }
 
 
                .teamMember{
-                   width: 70%;
+                   width: 25;
                    height: 60%;
-                   background-color: black;
                    border-radius: 1rem;
-                   @media (max-width: 1000px) {
-                    width: 90%;
+                   @media (max-width: 1050px) {
+                   
                    }
 
        }
@@ -56,20 +95,20 @@
    font-size: 2rem;
    color: rgb(0, 0, 0);
    border: 1px solid rgb(0, 0, 0);
-   width: 50%;
    display: flex;
    justify-content: center;
    margin: .3rem;
    border-radius: 1rem;
    border-bottom: 4px solid black;
+   background-color: rgb(201, 154, 27);
 
        &:hover{
-           background-color: rgb(255, 255, 255);
+           background-color: rgb(253, 211, 93);
            transition: background-color 1s;
        }
 }
 img{
-    width: 100%;
+    width: 20rem;
     height: 100%;
     border-radius: 1rem;
 }
