--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,63 +1,44 @@
 body{
-   background-image: url("../../img/Market2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
     height: 100%;
+    width: 100%;
+    background-color: rgb(48, 48, 48);
 }
-
-
-.intro{
-
-    height: 10%;
-    width: 60%;
-    margin: auto;
-   // background-image: url("../../img/orange3.jpg");
-   background-color: black;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-
-    .title{
-        height: 50%;
-        width: 100%;
-        color: rgb(255, 255, 255);
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-}
-
 
 .swiper-container{
-
-    width: 60%;
-    height:40%;
-    margin-top: 1rem;
+    width: 100%;
+    height:55%;
     margin-bottom: 1rem;
 
 }
     .slide1{
-        background-image:url("../../img/food1.jpg");
+        background-image:url("../../img/africa.jpg");
         background-repeat: no-repeat;
+        background-position: center;
         background-size: cover;
         
     }
     .slide2{
-        background-image:url("../../img/food2.jpg");
+        background-image:url("../../img/africa2.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
        
     }
     .slide3{
-        background-image:url("../../img/food3.jpg");
+        background-image:url("../../img/africa3.jpg");
         background-repeat: no-repeat;
+        background-position: center;
         background-size: cover;
         
     }
+
+.slideInfo{
+    background-color: black;
+    opacity: 0.8;
+    border-bottom: 1px solid rgb(201, 154, 27);
+    display: flex;
+    justify-content: center;
+}
 
 .btn1{
     color: white;
@@ -70,39 +51,75 @@ body{
 .Panel{
     margin: auto;
     margin-top: 3rem;
-    padding: 1rem;
-    width: 60%;
-    height: 50%;
-    background-color: white;
+    width: 80rem;
+    height: 30rem;
+    background-color: rgb(31, 31, 31);
     border-radius: 1rem;
-    //background-image: url("../../img/lines.jpg");
     display: flex;
     flex-direction: row;
+    align-content: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    border-top: 3px solid rgb(253, 231, 172);
+    border: 2px solid rgb(201, 154, 27);
+    border-bottom: 15px solid rgb(94, 72, 12);
+
+    @media(max-width:1300px){
+        flex-direction: column;
+        width: 40rem;
+        height: 65rem;
+        align-items: center;
+    }
+
+    @media(max-width:667px){
+        width: 80%;
+    }
+    
+
 
     .Info{
-        width: 50%;
-        height: 90%;
-        margin-top: .5rem;
-        padding: .25rem;
+        width: 40rem;
+        height: 25rem;
         
-         p{
-           color: black;
-           font-size: 1.5rem;
-       }
+        @media(max-width:1300px){
+            width: 38rem;
+            margin-top: 2rem;
+        }
+        
+        @media(max-width:667px){
+            width: 19rem;
+            margin-top: 0;
+        }
+        
     }
  }
 
+ hr{
+     border: 1px solid grey;
+ }
  .midInfoImg{
-    width: 50%;
-    height: 90%;
-    padding: 1rem;
-    background-image: url("../../img/mobile.png");
+    width: 30rem;
+    height: 25rem;
     background-size: cover;
+    background-position: center;
     border-radius: 1rem;
+    
+    @media(max-width:667px){
+        width:20rem;
+        height:20rem;
+    }
     
         p{
             color: black;
         }
  }
+
+ #midImg1{
+    background-image: url("../../img/mobile.png");
+}
+#midImg2{
+    background-image: url("../../img/Stocks.png");
+}
+#midImg3{
+    background-image: url("../../img/money.png");
+}
