--- a/less/navBox.less
+++ b/less/navBox.less
@@ -4,6 +4,10 @@
 
 .swiper-container2{
     height: 90%;
+
+    @media(min-width: 500px){
+        display: none;
+    }
 }
 
 .mobileHead{
@@ -27,7 +31,6 @@
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    filter: alpha(opacity=50);
 }
 .slide4{
 
