--- a/less/about-us.less
+++ b/less/about-us.less
@@ -1,11 +1,10 @@
 .titleAbout{
+   .displayflex(space-evenly, row);
     width: 100%;
     height: 5rem;
     background-color: rgb(201, 154, 27);
     opacity: 0.8;
     margin: auto;
-    display: flex;
-    justify-content: space-evenly;
     align-content: center;
     align-items: center;
 
@@ -26,7 +25,7 @@
    height: 5rem;
    margin: 1rem;
 
-   @media(max-width: 500px){
+   @media@phone{
    width: 6rem;
    height: 5rem;
    }
@@ -34,77 +33,70 @@
 }
 
 .teamWrapper{
+   .displayflex(space-around , row);
     padding: 1rem;
     margin-top: 2rem;
     margin: auto;
     width: 90%;
     background-image: url("../../img/code.jpg");
-    background-size: cover;
+   .imgBackgGround;
     background-attachment: fixed;
     border-radius: 1rem;
-    display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
 
-    @media(max-width:1050px){
+    @media@mediumAbout{
        width: 100%;
       
     }
 
        .teamMemberWrapper{
+          .displayflex(center,column);
            width: 30rem;
            height: 30rem;  
            margin: 1rem;
            border-radius: 1rem;
            background-color: rgb(39, 39, 39);
            border-top: 3px solid rgb(253, 231, 172);
-           border: 2px solid rgb(201, 154, 27);
+           border: 2px solid @Gold;
            border-bottom: 15px solid rgb(94, 72, 12);
-           display: flex;
-           flex-direction: column;
-           justify-content: center;
            align-items: center;
 
-           @media(max-width:1050px){
+           @media@mediumAbout{
               width: 40rem;
               margin-bottom: 5rem;
            }
-
-
-         
-           a{
-              width: 10rem;
-              text-decoration: none;
-           }
-
-
-               .teamMember{
-                   width: 25;
-                   height: 60%;
-                   border-radius: 1rem;
-                   @media (max-width: 1050px) {
-                   
-                   }
+           .teamMember{
+            width: 25;
+            height: 60%;
+            border-radius: 1rem;
+            
 
        }
     }
 }
 
+#aboutGit{
+   width: 10rem;
+   height: 1rem;
+   text-decoration: none;
+}
+
 .git{
+   .displayflex(center,row);
    font-size: 2rem;
    color: rgb(0, 0, 0);
    border: 1px solid rgb(0, 0, 0);
-   display: flex;
-   justify-content: center;
    margin: .3rem;
    border-radius: 1rem;
    border-bottom: 4px solid black;
-   background-color: rgb(201, 154, 27);
+   background-color: @Gold;
 
        &:hover{
-           background-color: rgb(253, 211, 93);
+           background-color: rgb(253, 253, 253);
+           transform: rotate(-5deg);
            transition: background-color 1s;
+           
+   
        }
 }
 img{
