--- a/less/home-page.less
+++ b/less/home-page.less
@@ -74,6 +74,8 @@ body{
         width: 20rem;
     }
     
+    
+
 }
 
     .Info{
@@ -86,9 +88,10 @@ body{
         }
         
         @media(max-width:667px){
-            width: 19rem;
+            width: 90%;
             margin-top: 0;
         }
+
         
     }
  
