--- a/less/navigation.less
+++ b/less/navigation.less
@@ -40,7 +40,7 @@
 .mobileNav{
     width: 100%;
     height: 5rem;
-    background-color: @gold;
+    background-color: @Gold;
     display: flex;
 
     @media@phoneCutOut{
